# translatordb

./: .gitignore
tools/: analyze_tatoeba.ipynb  iso_json_to_lang_codes.py  language-codes.json  tatoeba.py
tools/.ipynb_checkpoints/: analyze_tatoeba-checkpoint.ipynb
tools/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
tools/translate_api/: api_task.py  arb_translate.py  md_gen.py  pyproject.toml
tools/translate_api/.ipynb_checkpoints/: test-checkpoint.ipynb
tools/translate_api/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
